[package]
name = "L19_Reagan"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "*"
ed25519-dalek = "*"
solana-sdk = "*"
solana-program = "*"
solana-client = "*"
spl-associated-token-account = "*"
solana-account-decoder = "*"
bs58= "*"
toml= "*"
arrayref = "*"
bincode = "*"
bytemuck = "*"
arbitrary = "*"
num-traits = "*"
spl-math = "*"
num-derive = "*"
enum_dispatch = "*"
thiserror = "*"
spl-token = "*"
rand = "*"
serde = "*"
serde_derive = "*"
serde_json = "*"
colored = "*"
chrono = "*"
crossbeam-channel = "0.5.5"
